# project-manager-app

./: .gitignore  README.md  justfile  main.py  manage.py  pyproject.toml
core/: admin.py  forms.py  models.py  tables.py  views.py
core/migrations/: 0001_initial.py  0002_project_name.py  0003_requirement.py  0004_remove_project_risks_risk_project_and_more.py  0005_effortentry.py
core/static/core/js/: dynamic_formset.js
core/templates/core/: base.html  create_project.html  edit_project.html  home.html  list_projects.html  track_effort.html  view_project.html
requirements_site/: asgi.py  settings.py  urls.py  wsgi.py
