[project]
name = "requirements-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.3",
    "django-tables2>=2.8.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.2.0",
]
prod = [
    "gunicorn>=25.3.0",
]
